syntax = "proto3";

package orders;

option go_package = "github.com/odyssey121/bank_go/proto_services_go/orders";

service OrderService {
    rpc PlcaseOrder (PlaceOrderRequest) returns (PlaceOrderResponse);
}


message PlaceOrderRequest {
    string user_id = 1;
    repeated OrderItem items = 2;
    string address = 3; 
    string payment_method = 4;
}

message OrderItem {
    string product_id = 1;
    int32 quantity =2;
}

message PlaceOrderResponse {
    bool success = 1;
    string order_id = 2;
    string message = 3;
}